# tpmp-gr9b-lab4-superteam_lab4

./: CMakeLists.txt  README.md  Наркевич_Алексей_Бельский_Тимофей_ПИ_Лаб4.docx
.github/workflows/: ci.yml  db-check.yml
database/: model.xml  schema.sql  test_data.sql  tourism_bureau.db
docs/: index.md
includes/: auth.h  db_ops.h  reports.h
src/: auth.c  db_ops.c  main.c  reports.c
tests/: test_auth.cpp
